# iapetus

./: .gitignore  404.html  DEVELOPER.md  LICENSE  README.md  backup_call_states.py  backup_dynamics_models.py  conftest.py  index.html  local_dev_requirements.txt  mkdocs.yml  objects.inv  pyproject.toml  requirements.txt  sitemap.xml
bibref/: iapetus.bib  ieee.csl
definitions/: index.html
docs/: definitions.md  explanation.md  index.md  reference.md
docs/drawio/: lkf.drawio
docs/explanation/: phd_filter.md  single_target_bayes_filter.md
docs/javascripts/: bundle.af94fead.min.js  bundle.bec7f21d.min.js  custom.0fa778a4.min.js  timeago_mkdocs_material.js
docs/stylesheets/: extra.2af97fc9.min.css
explanation/: index.html
explanation/explanation/: index.html
explanation/phd_filter/: index.html
explanation/stm/: index.html
how-to-guides/: index.html
iapetus/: __init__.py
iapetus/core/: __init__.py  units.py
iapetus/data/: observation.py
iapetus/epimetheus/: __init__.py
iapetus/janus/: __init__.py
iapetus/linalg/: __init__.py
iapetus/prometheus/: __init__.py
iapetus/propagation/: __init__.py  propagators.py
iapetus/scenario/: __init__.py  choreography.py
iapetus/sensors/: __init__.py
iapetus/state/: __init__.py
iapetus/view/: error_plots.py
reference/: index.html
sensors/: __init__.py
site_backup/: 404.html  index.html  objects.inv  sitemap.xml
site_backup/definitions/: index.html
symbolic_derivations/: SYMBOLIC_DERIVATIONS.md  atmos_drag.py  first_attempt_example.py
test/fixtures/: __init__.py  (+3 more)
tutorials/: index.html
(+109 files in other folders)
